--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^14.14.22",
     "fullstack-serverless": "^0.8.0",
     "prettier": "^2.2.1",
+    "serverless": "^2.25.2",
     "typescript": "^4.1.3"
   },
   "scripts": {
